# DeepSeek-OCR-2-burn

./: .gitignore  Cargo.toml  README.md
src/: main.rs  store_adapters.rs
src/model/: deepseek_ocr2.rs  deepseek_v2.rs  mod.rs  qwen2.rs  sam.rs
tests/: safetensors_pytorch_roundtrip.rs
