[package]
name = "deepseek_ocr2_burn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
burn = { version = "0.20.1", default-features = false, features = ["std", "vulkan", "store"] }
burn-ndarray = "0.20.1"
clap = { version = "4", features = ["derive"] }
image = "0.25"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

[dev-dependencies]
